# finance-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  check_db.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_huggingface.yml
notebooks/: app.py  finance_tracker.db  project_01.ipynb
