[project]
name = "assignment-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "beautifulsoup4>=4.14.3",
    "fpdf>=1.7.2",
    "google-genai>=1.73.1",
    "gradio>=6.13.0",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "langchain-openai>=1.1.16",
    "litellm>=1.83.0",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
